# connect-pay

./: .gitignore  Dockerfile  Makefile  README.md  config.py  main.py  pyproject.toml  test.html
alembic/: env.py
alembic/versions/: 06d20931fb97_initial.py  3633992e88b4_second.py  7c5a427fba8a_update_config_model.py  c451aac65aa3_initial.py  d03851d44dbb_integrator_conf.py  d095092ed86d_foreign_key_on_payment.py  db8fbe5faea5_second_migration.py  fc73c90a0ab6_initial_migration.py
devops/: docker-compose.services.yml  docker-compose.yml
sql/: hyperpay_crud.py  integrator_crud.py  models.py  paypal_crud.py  schemas.py  settings.py  users_crud.py
sql/orms/: hyperpay_crud.py  integrator_crud.py  payment_crud.py  paypal_crud.py
src/: backend.py  middlewares.py
src/providers/: base.py  connect.py  exceptions.py  hyperpay.py  paypal.py  serializers.py
templates/: integrator_create.html  integrator_edit.html
