[tool.poetry]
name = "connect-pay-project"
version = "0.1.0"
description = ""
authors = ["awwa <abdallah.a@sitech.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.0"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.1"}
pydantic = "^2.1.1"
pydantic-settings = "^2.0.2"
requests = "^2.31.0"
sqlalchemy = "^2.0.20"
psycopg2-binary = "^2.9.7"
alembic = "^1.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
